--- a/DataStructuresAndAlgorithms/DataStructuresAndAlgorithms.csproj
+++ b/DataStructuresAndAlgorithms/DataStructuresAndAlgorithms.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>DataStructuresAndAlgorithms.Stacks.ValidateArithmeticInput</StartupObject>
+    <StartupObject>DataStructuresAndAlgorithms.Recursion.ReverseString</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,6 +51,8 @@
     <Compile Include="Lists\program.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recursion\CountStrLen.cs" />
+    <Compile Include="Recursion\ReverseString.cs" />
     <Compile Include="Stacks\ValidateArithmeticInput.cs" />
   </ItemGroup>
   <ItemGroup>
