--- a/DataStructuresAndAlgorithms/DataStructuresAndAlgorithms.csproj
+++ b/DataStructuresAndAlgorithms/DataStructuresAndAlgorithms.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>DataStructuresAndAlgorithms.Recursion.ReverseString</StartupObject>
+    <StartupObject>DataStructuresAndAlgorithms.Dictionary.q2</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dictionary\q1.cs" />
+    <Compile Include="Dictionary\q2.cs" />
     <Compile Include="Lists\LList.cs" />
     <Compile Include="Lists\Node.cs" />
     <Compile Include="Lists\program.cs" />
